SERVER-49145: Prevent distributed lock timeouts in suites with background migrations